--- a/08-Omnifood-Responsive/css/queries.css
+++ b/08-Omnifood-Responsive/css/queries.css
@@ -193,4 +193,12 @@
     grid-column: 1 / -1;
     justify-self: center;
   }
+
+  .heading-secondary {
+    margin-bottom: 4.8rem;
+  }
+
+  .pricing-plan {
+    width: 100%;
+  }
 }
