--- a/09-Omnifood-Optimizations/css/style.css
+++ b/09-Omnifood-Optimizations/css/style.css
@@ -56,7 +56,7 @@
   background-color: #cf711f;
 }
 
-/* MOBILE */
+/* MOBILE NAVIGATION */
 .btn-mobile-nav {
   border: none;
   background: none;
@@ -73,6 +73,16 @@
 
 .icon-mobile-nav[name="close-outline"] {
   display: none;
+}
+
+/* STICKY NAVIGATION */
+.sticky {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.97);
+  z-index: 999;
 }
 
 /***********************************/
