--- a/09-Omnifood-Optimizations/css/style.css
+++ b/09-Omnifood-Optimizations/css/style.css
@@ -81,8 +81,13 @@
   top: 0;
   bottom: 0;
   width: 100%;
+  height: 6rem;
+  padding-top: 0;
+  padding-bottom: 0;
   background-color: rgba(255, 255, 255, 0.97);
   z-index: 999;
+
+  box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.03);
 }
 
 /***********************************/
@@ -90,7 +95,7 @@
 /***********************************/
 .section-hero {
   background-color: #fdf2e9;
-  padding: 4.8rem 0 9.6rem 0;
+  padding: 6.4rem 0 9.6rem 0;
 }
 
 .hero {
