--- a/09-Omnifood-Optimizations/css/style.css
+++ b/09-Omnifood-Optimizations/css/style.css
@@ -84,7 +84,8 @@
   height: 6.4rem;
   padding-top: 0;
   padding-bottom: 0;
-  background-color: rgba(255, 255, 255, 0.97);
+  background-color: rgba(255, 255, 255, 0.7);
+  backdrop-filter: blur(8px);
   z-index: 999;
 
   box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.03);
