--- a/09-Omnifood-Optimizations/css/queries.css
+++ b/09-Omnifood-Optimizations/css/queries.css
@@ -131,7 +131,8 @@
   }
 
   .main-nav {
-    background-color: rgba(255, 255, 255, 0.97);
+    background-color: rgba(255, 255, 255, 0.7);
+    backdrop-filter: blur(8px);
     position: absolute;
     top: 0;
     left: 0;
